Fixed PyLinter errors and changed game domain logic
