# lingo/game/port/http/game_controller.py
@@ -6,28 +6,52 @@ from lingo.game.application.game_logic import create_game, guess_turn, create_ro
 
 
 def create_game_controller(user_id):
+    user_id = int(user_id)
     if type(user_id) == int:
         first_letter = create_game(user_id)
-        print(first_letter)
-        return make_response('Successfully created a game', 200)
+
+        response_json = {
+            'first_letter': first_letter[0],
+            'game_length': first_letter[1]
+        }
+
+        return make_response(json.dumps(response_json), 200)
 
 
 def create_round_controller(user_id):
     if type(user_id) == int:
         first_letter = create_round(user_id)
-        make_response(200, first_letter)
+
+        response_json = {
+            'first_letter': first_letter[0],
+            'game_length': first_letter[1]
+        }
+
+        make_response(json.dumps(response_json), 200)
 
 
 # TODO add guessed_word back
 def guess_word(user_id, guessed_word):
     if type(user_id) == int:
         response = guess_turn(user_id, guessed_word)
+        print(response)
 
-        response_json = {
-            "game_status": response[1],
-            "word": response[0]
-        }
+        if response[0].__eq__('abort'):
+            abort(404, 'An error occured')
+        if len(response) == 3:
+            response_json = {
+                    "game_status": response[0],
+                    "word": response[1],
+                    "validation_error": response[2]
+                }
+        else:
+            response_json = {
+                    "game_status": response[0],
+                    "word": response[1]
+                }
 
         return make_response(json.dumps(response_json), 200)
+
     else:
-        abort(404, "User_id is not a number")
+        abort(404, 'User_id is not a number')
+
