# lingo/swagger/swagger.yaml
@@ -39,24 +39,18 @@ paths:
           description: Return a word
         404:
           description: Can't choose a word
-  /game/create/{user_id}:
+  /game/create:
     post:
       operationId: lingo.game.application.game_logic.create_game
       summary: Start a game
-      parameters:
-        - name: user_id
-          description: User unique identifier
-          in: path
-          required: true
-          example: 4
-          schema:
-            type: integer
       responses:
         200:
           description: OK
           content:
             application/json:
               {}
+      security:
+        - jwt: [ 'secret' ]
   /game/round/{user_id}:
     post:
       operationId: lingo.game.application.game_logic.create_round
@@ -101,16 +95,6 @@ paths:
           content:
             application/json:
               {}
-  /game/all:
-    get:
-      description: Return all games in memory
-      operationId: lingo.game.application.game_logic.all_games
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              {}
   /user/all:
     get:
       description: Return all users
@@ -122,7 +106,7 @@ paths:
             application/json:
               {}
   /auth/{user_id}:
-    get:
+    post:
       summary: Return JWT token
       operationId: lingo.auth.auth.generate_token
       parameters:
